@@ -26,6 +26,7 @@ public class SmartRenameDialog extends JDialog
     private boolean validChoice = false;
     
     /** GUI components */
+    private JComboBox  jComboBoxType    = new JComboBox();
     private JTextField jTextOldPattern  = new JTextField();
     private JTextField jTextNewPattern  = new JTextField();
     private JButton    jButtonOk        = new JButton();
@@ -34,6 +35,8 @@ public class SmartRenameDialog extends JDialog
     /** old/new */
     private String oldPattern = null;
     private String newPattern = null;
+
+    private String applyTo    = null;
 
     //
     // construction
@@ -45,7 +48,9 @@ public class SmartRenameDialog extends JDialog
 	super(frame,true);
 	this.config=config;
 
+	applyTo = "All";
 	setContentPane(createContentPane());
+	jComboBoxType.setEnabled(true);
 	jTextOldPattern.setEditable(true);
 	jTextNewPattern.setEditable(true);
 	jButtonOk.setEnabled(true);
@@ -58,6 +63,12 @@ public class SmartRenameDialog extends JDialog
     // member functions
     //
     
+    private void jComboBoxTypeActionPerformed(ActionEvent e)
+    {
+	JComboBox jComboBox   = (JComboBox)e.getSource();
+	applyTo     = (String)jComboBox.getSelectedItem();
+    }
+  
     /** parameter name entered */
     public void jTextOldPatternActionPerformed(ActionEvent e)
     {
@@ -93,8 +104,11 @@ public class SmartRenameDialog extends JDialog
     /** parameter old name */
     public String oldPattern() { return oldPattern; }
 
-    /** parameter type */
+    /** parameter new name */
     public String newPattern() { return newPattern; }
+
+    /** applyTo */
+    public String applyTo() { return applyTo; }
 
     //
     // private member functions
@@ -105,11 +119,26 @@ public class SmartRenameDialog extends JDialog
     {
 	JPanel contentPane = new JPanel();
 	
-        JLabel jLabelOldPattern = new JLabel();
-        JLabel jLabelNewPattern = new JLabel();
+        JLabel jLabelComboBoxType= new JLabel();
+        JLabel jLabelOldPattern  = new JLabel();
+        JLabel jLabelNewPattern  = new JLabel();
 	
+	jLabelComboBoxType.setText("Apply to:");
         jLabelOldPattern.setText("Old Pattern:");
         jLabelNewPattern.setText("New Pattern:");
+
+	jComboBoxType.setBackground(Color.white);
+	DefaultComboBoxModel m=(DefaultComboBoxModel)jComboBoxType.getModel();
+	m.addElement("All");
+	m.addElement("Paths");
+	m.addElement("Sequences");
+	m.addElement("Modules");
+
+	jComboBoxType.addActionListener(new ActionListener() {
+		public void actionPerformed(ActionEvent e) {
+		    jComboBoxTypeActionPerformed(e);
+		}
+	    });
 
 	jTextOldPattern.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent evt) {
@@ -144,6 +173,8 @@ public class SmartRenameDialog extends JDialog
 
         layout.setHorizontalGroup(layout.createSequentialGroup()
 				  .add(layout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
+				       .add(jLabelComboBoxType,
+					    org.jdesktop.layout.GroupLayout.DEFAULT_SIZE,100,Short.MAX_VALUE)
 				       .add(jLabelOldPattern,
 					    org.jdesktop.layout.GroupLayout.DEFAULT_SIZE,100,Short.MAX_VALUE)
 				       .add(jLabelNewPattern,
@@ -152,6 +183,8 @@ public class SmartRenameDialog extends JDialog
 					    org.jdesktop.layout.GroupLayout.DEFAULT_SIZE,100,Short.MAX_VALUE)
 				       )
 				  .add(layout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
+				       .add(jComboBoxType,
+					    org.jdesktop.layout.GroupLayout.DEFAULT_SIZE,400,Short.MAX_VALUE)
 				       .add(jTextOldPattern,
 					    org.jdesktop.layout.GroupLayout.DEFAULT_SIZE,400,Short.MAX_VALUE)
 				       .add(jTextNewPattern,
@@ -161,6 +194,14 @@ public class SmartRenameDialog extends JDialog
 				       )
 				  );
 	layout.setVerticalGroup(layout.createSequentialGroup()
+				.add(layout.createParallelGroup(org.jdesktop.layout.GroupLayout.BASELINE)
+				     .add(jLabelComboBoxType,
+					  org.jdesktop.layout.GroupLayout.DEFAULT_SIZE,
+					  org.jdesktop.layout.GroupLayout.PREFERRED_SIZE, Short.MAX_VALUE)
+				     .add(jComboBoxType,
+					  org.jdesktop.layout.GroupLayout.DEFAULT_SIZE,
+					  org.jdesktop.layout.GroupLayout.PREFERRED_SIZE, Short.MAX_VALUE)
+				     )
 				.add(layout.createParallelGroup(org.jdesktop.layout.GroupLayout.BASELINE)
 				     .add(jLabelOldPattern,
 					  org.jdesktop.layout.GroupLayout.DEFAULT_SIZE,
